--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,5 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.0.0'
-      - name: Bundle Install
-        run: bundle install
-
-      - name: Run tests
-        run: rake test
+      - name: Gem build
+        run: gem build easycache.gemspec
