--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,11 +10,15 @@ jobs:
   build:
     if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.user.login == 'dependabot[bot]')
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        ruby-version: ['3.1', '3.0', '2.7']
+    name: Build gem with Ruby ${{ matrix.ruby-version }}
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Ruby
+      - name: Set up Ruby ${{ matrix.ruby-version }}
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.0.0'
-      - name: Gem build
+          ruby-version: ${{ matrix.ruby-version }}
+      - name: Gem build with Ruby ${{ matrix.ruby-version }}
         run: gem build easycache.gemspec
