--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,15 +7,18 @@ on:
       - main
 
 jobs:
-  build:
+  test:
     if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.user.login == 'dependabot[bot]')
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        ruby-version: ['3.1', '3.0', '2.7']
+    name: Test with Ruby ${{ matrix.ruby-version }}
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Ruby
+      - name: Set up Ruby ${{ matrix.ruby-version }}
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.0.0'
-          
-      - name: Run tests
+          ruby-version: ${{ matrix.ruby-version }}
+      - name: Run tests with Ruby ${{ matrix.ruby-version }}
         run: rake test
