--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ['3.1', '3.0', '2.7']
+        ruby-version: ['3.3', '3.2', '3.1', '3.0', '2.7']
     name: Test with Ruby ${{ matrix.ruby-version }}
     steps:
       - uses: actions/checkout@v2
